--- a/.gitignore
+++ b/.gitignore
@@ -299,6 +299,7 @@ xcuserdata/
 
 ### Xcode Patch ###
 *.xcodeproj/*
+/*.xcodeproj/*
 !*.xcodeproj/project.pbxproj
 !*.xcodeproj/xcshareddata/
 !*.xcodeproj/project.xcworkspace/
